--- a/src/app.css
+++ b/src/app.css
@@ -15,23 +15,50 @@ h1 {
   font-size: 1.8em;
 }
 
+.overlay-banner {
+  position: absolute;
+  z-index: 10;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  top: 50%;
+
+  text-shadow: black 0 0 4px;
+  font-size: 64px;
+  font-weight: bolder;
+  animation-duration: 3s;
+  animation-name: zoom;
+  color: white;
+}
+
+@keyframes zoom {
+  from {
+    top: -64px;
+  }
+  to {
+    top: 50%;
+  }
+}
+
 .clue {
   display: block;
   width: 100%;
+  font-size: 1.2em;
 }
 
 button {
-  appearance: push-button;
-  font-size: 16px;
-  font-weight: bold;
-  padding: 1em;
-  border-radius: 1em;
-  border-width: 4px;
+  appearance: none;
+  font-size: 1.3em;
+  font-weight: bolder;
+  padding: 0.5em;
+  border-radius: 0.5em;
+  border-width: 5px;
 
-  border-top-color: #eeb;
-  border-left-color: #eeb;
+  border-top-color: #ccc;
+  border-left-color: #ccc;
   border-bottom-color: #ccc;
   border-right-color: #ccc;
+  background: white;
 }
 
 button:active {
